--- a/templates/front/front_index.html.twig
+++ b/templates/front/front_index.html.twig
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-        <title>{% block title %}LocAuto - Admin{% endblock %}</title>
+        <title>{% block title %}LocAuto - Profil{% endblock %}</title>
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
@@ -35,7 +35,7 @@
 
         <div class="d-flex">
                 {% block menu %}
-                     {% include "partials/_admin_menu.html.twig" %}
+                     {% include "partials/_user_menu.html.twig" %}
                 {% endblock %}
                 {% block body %}
                 <div class="admin-wrapper flex-direction-column p-4">
