--- a/templates/order/new.html.twig
+++ b/templates/order/new.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="container mt-4 col-md-6">
     <h1>Vérifier et confirmer la réservation</h1>
-    {{ include('order/_form.html.twig', {'button_label': 'Réserver'}) }}
+    {{ include('order/_form.html.twig') }}
 
     <a href="{{ path('home') }}" class="btn btn-primary" title="retour à l'accueil"><i class="fas fa-arrow-left me-2"></i>Retour</a>
 </div>
