--- a/templates/partials/_admin_menu.html.twig
+++ b/templates/partials/_admin_menu.html.twig
@@ -5,30 +5,18 @@
             <h3>Menu administration</h3>
         </div>
         <ul class="list-unstyled components">
-            {% if '/admin/vehicles' in app.request.pathinfo %}
-                <li class="active">
-            {% else %}
-                <li>
-            {% endif %}
+            <li {{('/admin/vehicles' in app.request.pathinfo) ? 'class="active"' : '' }}>
                 <a href="{{path('admin_vehicle_index')}}">Gestion véhicules</a>
             </li>
-            {% if '/admin/members' in app.request.pathinfo %}
-                <li class="active">
-            {% else %}
-                <li>
-            {% endif %}
+            <li {{('/admin/members' in app.request.pathinfo) ? 'class="active"' : '' }}>
                 <a href="{{path('admin_member_index')}}">Gestion clients</a>
             </li>
-            {% if '/admin/orders' in app.request.pathinfo %}
-                <li class="active">
-            {% else %}
-                <li>
-            {% endif %}
+            <li {{('/admin/orders' in app.request.pathinfo) ? 'class="active"' : '' }}>
                 <a href="{{path('admin_order_index')}}">Gestion commandes</a>
             </li>
         </ul>
 {% if app.request.pathinfo == '/admin/vehicles/' %}
-    {{ include('vehicle/_form.html.twig') }}
+    {{ include('admin/admin_vehicle_form.html.twig') }}
 {% endif %}
     </nav>
 
