--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -1,22 +1,25 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Reset your password{% endblock %}
+{% block title %}{{parent()}} - Mot de passe oublié{% endblock %}
 
 {% block body %}
-    {% for flashError in app.flashes('reset_password_error') %}
-        <div class="alert alert-danger" role="alert">{{ flashError }}</div>
-    {% endfor %}
-    <h1>Reset your password</h1>
-
-    {{ form_start(requestForm) }}
-        {{ form_row(requestForm.emailAddress) }}
-        <div>
-            <small>
-                Enter your email address and we we will send you a
-                link to reset your password.
-            </small>
+    <div class="container mt-4 col-md-6">
+        {% for flashError in app.flashes('reset_password_error') %}
+            <div class="alert alert-danger" role="alert">{{ flashError }}</div>
+        {% endfor %}
+        <div class="text-center">
+            <h1>Mot de passe oublié</h1>
         </div>
-
-        <button class="btn btn-primary">Send password reset email</button>
-    {{ form_end(requestForm) }}
+        {{ form_start(requestForm) }}
+            {{ form_row(requestForm.emailAddress) }}
+            <div>
+                <small>
+                    Entrez votre adresse mail et nous vous enverrons un lien pour modifier votre mot de passe
+                </small>
+            </div>
+            <div class="text-center mt-5">
+                <button class="btn btn-primary">Envoyer le mail</button>
+            </div>
+        {{ form_end(requestForm) }}
+    </div>
 {% endblock %}
