--- a/templates/admin/admin_member_form.html.twig
+++ b/templates/admin/admin_member_form.html.twig
@@ -1,5 +1,5 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
+    {{ form_widget(form.roles) }}
     <div class="text-start my-4">
         <button class="btn btn-success"><i class="fas fa-save me-2"></i>{{ button_label|default('Ajouter client') }}</button>
     </div>
